--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_otp_text_field: ^1.1.1
   device_preview: ^1.1.0
+  get_storage: ^2.1.1
+  font_awesome_flutter: ^10.4.0
+  country_flags: ^1.1.1
+  circle_flags: ^1.0.4
 
 
 dev_dependencies:
