--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   country_flags: ^1.1.1
   circle_flags: ^1.0.4
+  http: ^0.13.6
+  dartz: ^0.10.1
 
 
 dev_dependencies:
